avoid showmorebutton overlapping with next widget

--- a/src/client/components/WidgetContainer/widgets/EditoriallySelectedMaterialsWidget/scss/EditoriallySelectedMaterials.widget.component.scss
+++ b/src/client/components/WidgetContainer/widgets/EditoriallySelectedMaterialsWidget/scss/EditoriallySelectedMaterials.widget.component.scss
@@ -3,7 +3,6 @@
 .editorially-selected-materials-widget {
   text-align: center;
   margin-top: 10px;
-  margin-bottom: 10px;
 }
 
 .editorially-selected-materials-widget--show-more-button--container {
